--- a/style.css
+++ b/style.css
@@ -15,3 +15,141 @@
     --font-family: 'Poppins', sans-serif;
     --font-family: 'Roboto', sans-serif;
   }
+
+  * {
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+  }
+
+  html body {
+    width: 100vw;
+
+  }
+
+  .caixa {
+    width: 100%;
+    display: flex;
+    flex-direction:row;
+  }
+
+  .imagem {
+    order: 2;
+  }
+
+  .imagem img {
+    width: 720px;
+    height: 750px;
+    position: bottom center;
+  }
+
+  .conteudo {
+    order: 1;
+    width: 720px;
+    background-color: var(--background);
+  }
+
+  .logo img {
+    margin: 40px 0px 70px 40px;
+  }
+
+  .interno {
+    background-color: var(--form-background);
+    width: 572px;
+    height: 512px;
+    margin: 0px auto;
+    display:flex;
+  }
+
+  .interno1 {
+      width: 60%;
+      text-align: left;
+      margin: 55px auto;
+  }
+
+  .login {
+    display: flex;
+  }
+
+  .login h2 {
+    padding-left: 10px;
+    font-family: 'Poppins', sans-serif;
+    color: var(--text-title);
+    
+  }
+
+  .interno1 #loginh3 {
+    font-family: 'Roboto', sans-serif;
+    color: var(--text-base);
+    font-size: 16px;
+  }
+
+  .email h3 {
+    margin-top: 27px;
+    font-family: 'Poppins', sans-serif;
+    color: var(--text-base);
+  }
+
+  .email input {
+    width: 335px;
+    padding: 14px;
+    border-radius: 4px;
+    border: 2px solid var(--primary-color);
+    background-color: var(--form-background);
+    color: WHITE;
+  }
+
+  .senha h3 {
+    font-family: 'Poppins', sans-serif;
+    color: var(--text-base);
+    margin-top: 20px;
+  }
+
+  .senha input {
+    width: 335px;
+    padding: 14px;
+    border-radius: 4px;
+    border: 2px solid var(--primary-color);
+    background-color: var(--form-background);
+    margin-bottom: 20px;
+    color: WHITE;
+  }
+
+  .check {
+    color: var(--text-base);
+    font-family: 'Roboto', sans-serif;
+  }
+
+  .check a {
+    text-decoration: none;
+    font-family: 'Poppins', sans-serif;
+    color: var(--primary-color);
+    padding-left: 60px;
+  }
+
+  button {
+    width: 100%;
+    margin-top: 20px;
+    padding: 12px;
+    border-radius: 5px;
+    background-color: var(--primary-color);
+    color: var(--background);
+  }
+
+  button:hover {
+    background-color: var(--text-title);
+    color: var(--background);
+    transition: 0.4s;
+  }
+
+  .link {
+    margin-top: 14px;
+  }
+
+  .link a {
+    text-decoration: none;
+    font-family: 'Poppins', sans-serif;
+    color: var(--primary-color);
+  }
+
+
