--- a/style.css
+++ b/style.css
@@ -24,7 +24,6 @@
 
   html body {
     width: 100vw;
-
   }
 
   .caixa {
@@ -33,13 +32,8 @@
     flex-direction:row;
   }
 
-  .imagem {
-    order: 2;
-  }
-
   .imagem img {
-    width: 720px;
-    height: 750px;
+    width: 100%;
     position: bottom center;
   }
 
@@ -49,36 +43,28 @@
     background-color: var(--background);
   }
 
-  .logo img {
-    margin: 40px 0px 70px 40px;
-  }
-
   .interno {
     background-color: var(--form-background);
-    width: 572px;
-    height: 512px;
-    margin: 0px auto;
-    display:flex;
+    width: 65%;
+    margin: 0 auto;
   }
 
   .interno1 {
-      width: 60%;
-      text-align: left;
-      margin: 55px auto;
+    text-align: center;
+    padding: 32px 0px;
   }
 
-  .login {
+  .partep {
     display: flex;
+    justify-content: center;
+    width: 63%;
   }
 
-  .login h2 {
-    padding-left: 10px;
-    font-family: 'Poppins', sans-serif;
-    color: var(--text-title);
-    
+  .partep h2 {
+    color: white;
   }
 
-  .interno1 #loginh3 {
+  #loginh3 {
     font-family: 'Roboto', sans-serif;
     color: var(--text-base);
     font-size: 16px;
@@ -88,10 +74,11 @@
     margin-top: 27px;
     font-family: 'Poppins', sans-serif;
     color: var(--text-base);
+    width: 40%;
   }
 
   .email input {
-    width: 335px;
+    width: 75%;
     padding: 14px;
     border-radius: 4px;
     border: 2px solid var(--primary-color);
@@ -103,10 +90,11 @@
     font-family: 'Poppins', sans-serif;
     color: var(--text-base);
     margin-top: 20px;
+    width: 40%;
   }
 
   .senha input {
-    width: 335px;
+    width: 75%;
     padding: 14px;
     border-radius: 4px;
     border: 2px solid var(--primary-color);
@@ -128,8 +116,8 @@
   }
 
   button {
-    width: 100%;
-    margin-top: 20px;
+    width: 75%;
+    margin: 24px 0px 16px;
     padding: 12px;
     border-radius: 5px;
     background-color: var(--primary-color);
@@ -142,16 +130,16 @@
     transition: 0.4s;
   }
 
-  .link {
-    margin-top: 14px;
-  }
-
   .link a {
     text-decoration: none;
     font-family: 'Poppins', sans-serif;
     color: var(--primary-color);
   }
 
-  @media (max-width:600px)
+  @media (max-width:2000px) {
+    .ciaxa {
+      display: block;
+    }
+  }
 
 
